--- a/SOLID Prensipleri/SOLID Prensipleri.csproj
+++ b/SOLID Prensipleri/SOLID Prensipleri.csproj
@@ -46,6 +46,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="2-OCP\BadExample\BadHamburger.cs" />
+    <Compile Include="2-OCP\GoodExample\Abstract\GoodHamburger.cs" />
+    <Compile Include="2-OCP\GoodExample\Concrete\CheeseBurger.cs" />
+    <Compile Include="2-OCP\GoodExample\Concrete\Chicken Burger.cs" />
+    <Compile Include="2-OCP\GoodExample\Concrete\FishBurger.cs" />
+    <Compile Include="3-LSP\BadExample\BadArea.cs" />
+    <Compile Include="3-LSP\BadExample\BadAreaCalculater.cs" />
+    <Compile Include="3-LSP\BadExample\BadRectangle.cs" />
+    <Compile Include="3-LSP\GoodExample\Abstract\BaseShape.cs" />
+    <Compile Include="3-LSP\GoodExample\Concrete\AreaShape.cs" />
+    <Compile Include="3-LSP\GoodExample\Concrete\RectangleShape.cs" />
+    <Compile Include="4-ISP\BadExample\Concrete\Bird.cs" />
+    <Compile Include="4-ISP\BadExample\Concrete\Cat.cs" />
+    <Compile Include="4-ISP\BadExample\Concrete\Dog.cs" />
+    <Compile Include="4-ISP\BadExample\Interface\IAnimal.cs" />
+    <Compile Include="4-ISP\GoodExample\Concrete\Bird.cs" />
+    <Compile Include="4-ISP\GoodExample\Concrete\Cat.cs" />
+    <Compile Include="4-ISP\GoodExample\Concrete\Dog.cs" />
+    <Compile Include="4-ISP\GoodExample\Interface\IBrakable.cs" />
+    <Compile Include="4-ISP\GoodExample\Interface\IFlyable.cs" />
+    <Compile Include="4-ISP\GoodExample\Interface\IRunnable.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,10 +75,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SRP\BadExample\BadProduct.cs" />
-    <Compile Include="SRP\GoodExample\InsertProduct.cs" />
-    <Compile Include="SRP\GoodExample\Logger.cs" />
-    <Compile Include="SRP\Model\Product.cs" />
+    <Compile Include="1-SRP\BadExample\BadProduct.cs" />
+    <Compile Include="1-SRP\GoodExample\InsertProduct.cs" />
+    <Compile Include="1-SRP\GoodExample\Logger.cs" />
+    <Compile Include="1-SRP\Model\Product.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -82,8 +103,11 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="2-OCP\Nedir.txt" />
+    <Content Include="3-LSP\Nedir.txt" />
+    <Content Include="4-ISP\Nedir.txt" />
     <Content Include="Nedir.txt" />
-    <Content Include="SRP\Nedir.txt" />
+    <Content Include="1-SRP\Nedir.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
